[gd_scene load_steps=31 format=3 uid="uid://c7qsvamep2fwb"]

[ext_resource type="PackedScene" uid="uid://b3dwcphoy104o" path="res://Assets/Models/Enemies/beetle.glb" id="1_lcwkd"]
[ext_resource type="Script" path="res://Scenes/Enemies/Enemy.gd" id="1_r7yee"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="3_xhf75"]
[ext_resource type="Script" path="res://Scripts/Enemies/States/Chase.gd" id="4_qql02"]
[ext_resource type="Script" path="res://Scripts/Enemies/States/Attack.gd" id="5_li4u6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sjogr"]
radius = 0.4
height = 1.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xuoak"]
radius = 0.142925
height = 0.422667

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_41khs"]
radius = 0.106078
height = 0.212157

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4ij0v"]
radius = 0.126351
height = 0.377047

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cw3bn"]
radius = 0.175024
height = 0.380572

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ycfia"]
radius = 0.177241
height = 0.362222

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xhvo8"]
radius = 0.0201255
height = 0.201255

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w008w"]
radius = 0.0272714
height = 0.272714

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5ljpn"]
radius = 0.0276047
height = 0.276047

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t7n64"]
radius = 0.0136649
height = 0.136649

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u6c6f"]
radius = 0.0124487
height = 0.124487

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mmjjy"]
radius = 0.0107867
height = 0.107867

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d66st"]
radius = 0.0201255
height = 0.201255

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2bqwo"]
radius = 0.0272714
height = 0.272714

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v3uet"]
radius = 0.0276047
height = 0.276047

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_i35va"]
radius = 0.0136649
height = 0.136649

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iexgr"]
radius = 0.0124487
height = 0.124487

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1owsd"]
radius = 0.0107867
height = 0.107867

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mh6nk"]
radius = 0.043154
height = 0.43154

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c3csq"]
radius = 0.0479645
height = 0.479645

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7frwp"]
radius = 0.0192573
height = 0.192573

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a0yyt"]
radius = 0.043154
height = 0.43154

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_84tpw"]
radius = 0.0479645
height = 0.479645

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ry7ap"]
radius = 0.0192573
height = 0.192573

[sub_resource type="SphereShape3D" id="SphereShape3D_t2r5t"]
radius = 2.0

[node name="Beetle" type="CharacterBody3D" node_paths=PackedStringArray("skeleton", "animation_player")]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_r7yee")
speed = 320
skeleton = NodePath("beetle/metarig/Skeleton3D")
animation_player = NodePath("beetle/AnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_sjogr")

[node name="beetle" parent="." instance=ExtResource("1_lcwkd")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="beetle/metarig" index="0"]
bones/1/rotation = Quaternion(-0.0892244, 3.1816e-14, -2.12728e-08, 0.996012)
bones/3/rotation = Quaternion(0.00149264, 1.19209e-07, 1.77936e-10, 0.999999)
bones/4/rotation = Quaternion(0.210724, -3.51254e-07, -2.68247e-08, 0.977546)
bones/5/rotation = Quaternion(-0.19661, 2.35446e-07, 4.85559e-08, 0.980482)
bones/6/rotation = Quaternion(-0.503343, -0.459713, -0.281452, 0.675348)
bones/8/rotation = Quaternion(0.0933012, -0.0367361, -0.0272286, 0.994587)
bones/10/rotation = Quaternion(-0.00861365, -0.459773, -0.317505, 0.829292)
bones/12/rotation = Quaternion(-0.30408, -0.686454, 0.130906, 0.647442)
bones/15/rotation = Quaternion(-0.519239, -0.0554539, -0.318911, 0.790956)
bones/18/rotation = Quaternion(-0.0176068, -0.596041, 0.522496, 0.609445)
bones/20/rotation = Quaternion(0.0901531, -0.00688016, -0.136118, 0.986558)
bones/21/rotation = Quaternion(-0.00861364, 0.459773, 0.317505, 0.829292)
bones/23/rotation = Quaternion(-0.30408, 0.686454, -0.130906, 0.647442)
bones/24/rotation = Quaternion(-0.25624, -0.394259, 0.107654, 0.875963)
bones/25/rotation = Quaternion(-0.428749, 0.101459, 0.350787, 0.826335)
bones/26/rotation = Quaternion(-0.519239, 0.0554537, 0.318911, 0.790956)
bones/28/rotation = Quaternion(0.170108, 0.747541, 0.446647, -0.461251)
bones/29/rotation = Quaternion(0.984947, 5.9706e-09, 2.33782e-07, 0.172857)
bones/31/rotation = Quaternion(-0.480952, -0.000255868, -0.0759578, 0.873451)
bones/32/rotation = Quaternion(0.00196691, 0.945168, -0.325606, 0.0251627)
bones/34/rotation = Quaternion(-0.170108, 0.74754, 0.446647, 0.461252)
bones/36/rotation = Quaternion(0.096345, 0.00402741, -0.046664, 0.994245)
bones/37/rotation = Quaternion(-0.480952, 0.000255858, 0.0759578, 0.873451)
bones/38/rotation = Quaternion(-0.00196691, 0.945169, -0.325606, -0.0251627)
bones/39/rotation = Quaternion(0.222475, 0.0144972, 0.0298939, 0.974372)

[node name="Head" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="1"]
transform = Transform3D(1, -2.28035e-07, -7.88255e-08, -1.60649e-07, -0.385543, -0.92269, 1.80015e-07, 0.92269, -0.385543, 3.03474e-07, 1.69101, 0.00305885)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.05655e-07, 2.17514e-06, 0.0375079)
body_offset = Transform3D(1, 2.45331e-07, 6.08027e-08, -7.61909e-08, 1.51992e-06, -1, -2.52759e-07, 1.00001, 5.57303e-06, 3.03374e-07, 0.0375079, -2.38419e-06)
bone_name = "spine.004"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Head"]
transform = Transform3D(1, -1.42109e-14, 0, -1.98952e-13, 2.98023e-08, 1, 0, -1, 0, 7.90551e-09, -0.0322991, -0.199098)
shape = SubResource("CapsuleShape3D_xuoak")

[node name="Physical Bone spine" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="2"]
transform = Transform3D(1, 2.38418e-07, -2.52243e-13, 5.95186e-08, -0.249641, -0.968339, -2.30869e-07, 0.968338, -0.249641, -1.33912e-09, 0.99142, -0.0423943)
collision_layer = 2
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.60679e-11, 0.0059987, 0.0745644)
body_offset = Transform3D(1, -5.83138e-09, -1.95399e-13, 8.88178e-14, -1.47521e-06, -1.00001, 6.82121e-13, 1, -1.17719e-06, 9.10632e-11, 0.0745652, -0.00599861)
bone_name = "spine"

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone spine"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_41khs")

[node name="Physical Bone spine_001" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="3"]
transform = Transform3D(1, 2.50554e-07, 3.94652e-08, 5.77878e-08, -0.0735549, -0.997291, -2.46973e-07, 0.997291, -0.0735549, 1.48256e-07, 1.17902, -0.00879907)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.74567e-07, -5.75047e-07, 0.114202)
body_offset = Transform3D(1, 8.79606e-08, 2.30392e-07, 3.94652e-08, 1.78814e-07, -1.00004, -1.21357e-08, 1.00002, 1.51247e-06, 1.48256e-07, 0.114207, 4.02331e-07)
bone_name = "spine.001"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone spine_001"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_4ij0v")

[node name="Physical Bone spine_002" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="4"]
transform = Transform3D(1, -5.39445e-08, 2.60399e-07, 2.61984e-07, 0.0318117, -0.999494, 4.56334e-08, 0.999494, 0.0318117, 9.97885e-08, 1.37931, -0.00315086)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.01926e-07, 8.74751e-07, 0.0864428)
body_offset = Transform3D(1.00001, -5.42152e-08, 2.47382e-08, 2.60402e-07, -8.71718e-07, -1.00009, 5.39452e-08, 1.00006, -2.19047e-06, 9.97885e-08, 0.0864506, -6.85453e-07)
bone_name = "spine.002"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone spine_002"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_cw3bn")

[node name="Physical Bone spine_003" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="5"]
transform = Transform3D(1, 1.85525e-07, -1.11117e-07, -1.16419e-07, 0.0288264, -0.999584, -1.82245e-07, 0.999584, 0.0288264, 2.40947e-07, 1.56099, -0.00864942)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.42453e-07, 9.45119e-07, 0.095333)
body_offset = Transform3D(1.00001, 4.18893e-08, 1.58269e-08, -1.11118e-07, -2.24076e-06, -1, 5.28931e-08, 1.00001, 2.2389e-06, 2.40947e-07, 0.095333, -1.15857e-06)
bone_name = "spine.003"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone spine_003"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_ycfia")

[node name="Physical Bone shoulder_L" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="6"]
transform = Transform3D(0.22281, -0.354028, -0.908306, 0.519169, 0.831701, -0.196816, 0.825118, -0.427712, 0.369112, 0.121569, 1.56496, 0.0792503)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.49794e-05, -0.00016224, 0.100587)
body_offset = Transform3D(0.893566, -0.44354, -0.0691438, 2.19047e-05, 0.154047, -0.988089, 0.448847, 0.88307, 0.137644, 0.00695002, 0.0994141, -0.0136683)
bone_name = "shoulder.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone shoulder_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_xhvo8")

[node name="Physical Bone upper_arm_L" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="7"]
transform = Transform3D(-0.422934, -0.292422, -0.857681, -0.905914, 0.158537, 0.392666, 0.0211499, 0.943057, -0.331959, 0.329998, 1.53106, 0.0873689)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.2752e-06, -4.97149e-07, 0.136356)
body_offset = Transform3D(1.00006, 1.27591e-06, -4.78746e-06, 1.11992e-06, 6.25849e-07, -1.00002, -9.01334e-06, 1.00003, -4.44055e-06, -2.6226e-06, 0.136359, 1.10269e-06)
bone_name = "upper_arm.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone upper_arm_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_w008w")

[node name="Physical Bone forearm_L" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="8"]
transform = Transform3D(-0.493384, -0.410952, -0.76661, -0.867385, 0.29825, 0.39836, 0.0649346, 0.86149, -0.503605, 0.552758, 1.42253, 0.202144)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.30678e-06, -3.50873e-06, 0.138022)
body_offset = Transform3D(1.00001, 2.30968e-07, 4.35114e-06, 7.15256e-07, -5.78165e-06, -1.00002, -2.00421e-06, 1.00001, 3.39746e-06, -1.90735e-06, 0.138025, 3.03984e-06)
bone_name = "forearm.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone forearm_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_5ljpn")

[node name="Physical Bone hand_L" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="9"]
transform = Transform3D(-0.272752, -0.557961, -0.783764, -0.939368, 0.330431, 0.0916687, 0.207832, 0.761245, -0.614257, 0.712114, 1.36129, 0.313624)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.20912e-06, -6.59333e-06, 0.0683248)
body_offset = Transform3D(0.999987, -2.22027e-06, -2.563e-06, -3.97861e-05, 3.18885e-06, -1, 5.78165e-06, 1, -7.7486e-06, 2.38419e-06, 0.0683248, 7.12276e-06)
bone_name = "hand.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone hand_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_t7n64")

[node name="Physical Bone Finger1U_L" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="10"]
transform = Transform3D(-0.93751, 0.124517, -0.324917, -0.0515162, 0.873819, 0.483515, 0.344125, 0.470038, -0.812799, 0.785899, 1.32493, 0.406178)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.54458e-06, -2.84934e-06, 0.0622427)
body_offset = Transform3D(0.999994, -3.57628e-07, -1.19209e-06, -8.46386e-06, 2.68221e-07, -1.00002, -9.68575e-07, 1.00002, 1.72853e-06, -4.47035e-06, 0.0622439, 2.74181e-06)
bone_name = "Finger1U.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone Finger1U_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_u6c6f")

[node name="Physical Bone Finger2U_L" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="11"]
transform = Transform3D(0.00216743, 0.50294, -0.864319, 0.191737, 0.848076, 0.493969, 0.981444, -0.166793, -0.094594, 0.812247, 1.32841, 0.360683)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.73389e-07, -6.06797e-06, 0.0538851)
body_offset = Transform3D(1.00001, -2.80142e-06, -1.00583e-06, 1.90735e-06, 2.52575e-06, -1.00001, -7.89762e-07, 1.00001, -2.16067e-07, -1.19209e-07, 0.0538856, 6.07967e-06)
bone_name = "Finger2U.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone Finger2U_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_mmjjy")

[node name="Physical Bone shoulder_R" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="12"]
transform = Transform3D(0.22281, 0.354028, 0.908306, -0.519131, 0.831721, -0.196834, -0.825142, -0.427673, 0.369103, -0.121641, 1.56478, 0.0792443)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.5919e-06, 1.01002e-05, 0.100612)
body_offset = Transform3D(0.893633, 0.443532, 0.0691472, 1.43051e-06, 0.154034, -0.988172, -0.448837, 0.883066, 0.137644, -0.00695562, 0.0994203, -0.0138605)
bone_name = "shoulder.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone shoulder_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_d66st")

[node name="Physical Bone upper_arm_R" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="13"]
transform = Transform3D(-0.422929, 0.292422, 0.857683, 0.905916, 0.158538, 0.392661, -0.0211532, 0.943056, -0.33196, -0.329995, 1.53106, 0.0873523)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.73498e-07, 1.35559e-05, 0.136351)
body_offset = Transform3D(1.00002, -5.58794e-09, 4.84753e-06, -7.73324e-06, 1.19209e-07, -1.00001, 8.99658e-06, 1.00001, 3.30806e-06, -8.34465e-07, 0.136352, -1.40071e-05)
bone_name = "upper_arm.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone upper_arm_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_2bqwo")

[node name="Physical Bone forearm_R" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="14"]
transform = Transform3D(-0.493385, 0.410946, 0.766612, 0.867383, 0.298251, 0.398362, -0.064937, 0.861493, -0.503601, -0.552758, 1.42253, 0.202141)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2514e-06, 9.53579e-07, 0.138025)
body_offset = Transform3D(1.00001, -1.42306e-06, 3.02494e-06, -4.80562e-07, -7.7486e-07, -1, 6.96629e-07, 1.00001, 8.64267e-07, -1.66893e-06, 0.138025, -1.07288e-06)
bone_name = "forearm.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone forearm_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_v3uet")

[node name="Physical Bone hand_R" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="15"]
transform = Transform3D(-0.272718, 0.557963, 0.783774, 0.939373, 0.330427, 0.0916297, -0.207855, 0.761245, -0.614249, -0.712122, 1.36129, 0.313622)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.33156e-07, -5.95161e-06, 0.0683275)
body_offset = Transform3D(1.00004, 4.05312e-06, -9.92417e-06, -1.2666e-06, 1.57952e-06, -1.00003, -5.96046e-07, 1.00005, 7.14064e-05, 1.3113e-06, 0.0683296, 1.07288e-06)
bone_name = "hand.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone hand_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_i35va")

[node name="Physical Bone Finger1U_R" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="16"]
transform = Transform3D(-0.937506, -0.124521, 0.324925, 0.0515165, 0.873819, 0.483514, -0.344134, 0.470037, -0.812796, -0.785903, 1.32493, 0.406181)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.02816e-06, -2.22597e-06, 0.0622488)
body_offset = Transform3D(1.00001, 1.53333e-05, -1.99676e-06, -1.78814e-07, 5.66244e-07, -1.00001, -1.53482e-06, 1.00003, -6.25849e-07, 7.15256e-06, 0.0622494, 2.26498e-06)
bone_name = "Finger1U.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone Finger1U_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_iexgr")

[node name="Physical Bone Finger2U_R" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="17"]
transform = Transform3D(0.00217643, -0.502933, 0.864323, -0.191728, 0.84808, 0.493965, -0.981446, -0.16679, -0.0945806, -0.812287, 1.32838, 0.36069)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.43005e-06, -1.86465e-07, 0.0539355)
body_offset = Transform3D(1.00004, 3.50177e-06, 7.45058e-09, -1.40145e-05, -5.95301e-06, -1.00001, 5.42402e-06, 1.00001, 3.45707e-06, -1.43051e-06, 0.053936, 0)
bone_name = "Finger2U.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone Finger2U_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_1owsd")

[node name="Physical Bone thigh_L" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="18"]
transform = Transform3D(1, 1.58692e-06, 1.40359e-06, -1.24638e-06, -0.0950614, 0.995471, 1.71316e-06, -0.995471, -0.0950614, 0.142189, 0.924922, 0.00809874)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00299983, -3.30668e-06, 0.215789)
body_offset = Transform3D(0.999989, 9.15377e-06, 8.67646e-07, 1.41561e-06, 5.38528e-05, -0.999993, -1.34856e-06, 0.999904, 2.98023e-06, -0.00299998, 0.215787, 2.66731e-06)
bone_name = "thigh.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone thigh_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_mh6nk")

[node name="Physical Bone shin_L" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="19"]
transform = Transform3D(0.995614, 0.00101655, 0.0935547, -0.0932045, 0.0978866, 0.990823, -0.00815054, -0.995197, 0.097552, 0.122769, 0.472611, 0.00530549)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.86439e-06, 5.77513e-05, 0.239843)
body_offset = Transform3D(0.999528, 0.00025971, -1.67213e-05, -1.21576e-05, -4.21479e-05, -0.999506, -2.93134e-05, 0.999398, 0.000101484, 9.85712e-06, 0.239725, -8.2057e-05)
bone_name = "shin.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone shin_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_c3csq")

[node name="Physical Bone foot_L" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="20"]
transform = Transform3D(0.996586, -0.00579457, -0.0823532, 0.0462963, -0.786696, 0.615602, -0.0683541, -0.617313, -0.783742, 0.108241, 0.175633, 0.0573156)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.35409e-06, 1.03358e-05, 0.0961987)
body_offset = Transform3D(1.00031, 4.88013e-07, 8.19564e-08, -2.63564e-05, 2.5928e-06, -1.00106, 5.4352e-06, 1, 8.55625e-05, 2.34693e-06, 0.0963007, -1.85668e-05)
bone_name = "foot.L"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone foot_L"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_7frwp")

[node name="Physical Bone thigh_R" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="21"]
transform = Transform3D(1, -6.85453e-07, 2.85901e-07, -3.4973e-07, -0.0950068, 0.995477, -6.5519e-07, -0.995477, -0.0950068, -0.145189, 0.924941, 0.00809915)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.19789e-08, -4.8539e-07, 0.215769)
body_offset = Transform3D(1, 3.56156e-06, 2.20734e-07, 2.98023e-07, -1.75834e-06, -0.999997, 4.47035e-07, 1.00002, -6.85453e-07, -5.96046e-08, 0.215768, 6.33299e-07)
bone_name = "thigh.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone thigh_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_a0yyt")

[node name="Physical Bone shin_R" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="22"]
transform = Transform3D(0.995613, -0.000986437, -0.093567, 0.0932142, 0.0978365, 0.990828, 0.00817688, -0.995202, 0.0974992, -0.122753, 0.472523, 0.00521708)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.96683e-06, -8.21108e-07, 0.23984)
body_offset = Transform3D(0.999993, -6.95698e-07, -4.67262e-06, 2.18279e-08, 1.01477e-05, -0.999923, 3.97954e-06, 0.999373, 1.2368e-05, -2.84612e-06, 0.239822, -2.14577e-06)
bone_name = "shin.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone shin_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_84tpw")

[node name="Physical Bone foot_R" type="PhysicalBone3D" parent="beetle/metarig/Skeleton3D" index="23"]
transform = Transform3D(0.996588, 0.00578859, 0.0823353, -0.0462892, -0.786703, 0.615594, 0.0683368, -0.617305, -0.78375, -0.108237, 0.175628, 0.0572922)
collision_layer = 2
joint_type = 1
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.48543e-07, 2.02418e-07, 0.0962823)
body_offset = Transform3D(0.999996, -4.48525e-06, 1.82539e-07, 8.45641e-06, 1.28746e-05, -1.00002, -2.34693e-07, 1.00002, -8.64267e-07, 2.30968e-07, 0.0962842, -1.19209e-07)
bone_name = "foot.R"
joint_constraints/bias = 0.3
joint_constraints/damping = 1.0
joint_constraints/impulse_clamp = 0.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="beetle/metarig/Skeleton3D/Physical Bone foot_R"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 0, 0)
shape = SubResource("CapsuleShape3D_ry7ap")

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("3_xhf75")
CURRENT_STATE = NodePath("Chase")

[node name="Chase" type="Node" parent="EnemyStateMachine"]
script = ExtResource("4_qql02")

[node name="Attack" type="Node" parent="EnemyStateMachine"]
script = ExtResource("5_li4u6")

[node name="AttackRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_t2r5t")

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]

[editable path="beetle"]
